@@ -1,4 +1,5 @@
 
+	* fix issue resuming 1.0.x downloads with a file priority 0
 	* fix torrent_status::next_announce
 	* fix pad-file scalability issue
 	* made coalesce_reads/coalesce_writes settings take effect on linux and windows
